--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,10 @@ compiler:
 
 install:
   - sudo apt-get update
-  - sudo apt-get install libqt4-dev qt4-qmake
+  - sudo apt-get install libqt4-dev cmake
 
 script:
-  - qmake -project
-  - qmake hello.pro
+  - mkdir build
+  - cd build
+  - cmake ..
   - make
