--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,14 @@
 language: cpp
 
-compiler:
-  - gcc
-  - clang
+compiler: gcc
 
-install:
-  - sudo apt-get update
-  - sudo apt-get install libqt4-dev cmake
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq cmake qt4-dev qt4-dev-tools
 
-script:
+before_script:
   - mkdir build
   - cd build
   - cmake ..
-  - make
+
+script: make
