--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ compiler: gcc
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq cmake qt4-dev qt4-dev-tools
+  - sudo apt-get install -qq cmake qt4-dev-tools
 
 before_script:
   - mkdir build
